maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:11: error: ';' expected but 'else' found.
      }else{
       ^RandomMouseMaze:29: error: expected class or object definition
	def random3():Int = {
        ^RandomMouseMaze:36: error: Unmatched closing brace '}' ignored here
}
^